2025-09-28T02:05:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18067859305 # 1249
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
* notice: last 14d: unq all: 13 42
* notice: prev accum: outdated-unq outdated-all / unq all: 1207 5895 / 1222 5936
* notice: next accum: outdated-unq outdated-all / unq all: 1209 5900 / 1224 5942
* notice: prev exec diff / last date diff / accum: unq all: +2 +6 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [2025-09-13] / [2025-09-27]

2025-09-26T01:55:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18025603467 # 1245
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-26
* notice: last 14d: unq all: 13 41
* notice: prev accum: outdated-unq outdated-all / unq all: 1206 5894 / 1222 5936
* notice: next accum: outdated-unq outdated-all / unq all: 1207 5895 / 1222 5936
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-11] / []

2025-09-24T01:55:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17963986854 # 1241
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-24
* notice: last 14d: unq all: 14 42
* notice: prev accum: outdated-unq outdated-all / unq all: 1205 5892 / 1222 5936
* notice: next accum: outdated-unq outdated-all / unq all: 1206 5894 / 1222 5936
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-09] / []

2025-09-23T12:52:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17946759652 # 1240