@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-28T02:05:15Z",
-  "count_outdated" : 5900,
-  "uniques_outdated" : 1209,
-  "count" : 5942,
-  "uniques" : 1224,
+  "timestamp" : "2025-09-29T12:54:49Z",
+  "count_outdated" : 5901,
+  "uniques_outdated" : 1210,
+  "count" : 5943,
+  "uniques" : 1225,
   "views" : [
-    {
-      "timestamp": "2025-09-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-16T00:00:00Z",
       "count": 3,
@@ -76,6 +67,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
