@@ -3,11 +3,6 @@
   "uniques": 13,
   "views": [
     {
-      "timestamp": "2025-09-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-16T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -41,6 +36,11 @@
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 6,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
