@@ -1,3 +1,12 @@
+2025-09-29T12:54:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18097682707 # 1252
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
+* notice: last 14d: unq all: 13 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 1209 5900 / 1224 5942
+* notice: next accum: outdated-unq outdated-all / unq all: 1210 5901 / 1225 5943
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-15] / [2025-09-29]
+
 2025-09-28T02:05:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18067859305 # 1249
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
